--- a/flexbox exercise.html
+++ b/flexbox exercise.html
@@ -7,3 +7,39 @@
     
 </head>
 
+<body>
+<h1>
+    TOVE JANSSON
+</h1>
+<h2>
+    Creator of the Moomins
+</h2>
+<div class="container">
+
+
+ <div class="graph">
+        <p>
+            Tove Jansson’s artistic practice unfolds at the intersection of whimsy and profound existential inquiry. Best known for her creation of the *Moomins*, a family of gentle, round creatures who inhabit a world of enchanted forests and unexpected adventures, Jansson’s art transcends the bounds of children’s literature. Her work is imbued with a quiet, almost meditative quality, as though she were always on the verge of uncovering a universal truth. With a brushstroke or a simple line, Jansson is able to conjure entire worlds — tender yet wild, playful yet poignant — drawing from the same wellspring of Nordic melancholy that suffuses much of her work. Her art was often inextricable from her own life: an intimate fusion of her personal desires, fears, and moments of revelation, whether explored in the serene watercolors of her *Moomin* books or the introspective, spare drawings she made for her adult fiction.
+
+Jansson’s creative evolution was equally shaped by her dual identity as both a painter and a writer. Born into a family of artists in Helsinki, she grew up surrounded by the natural beauty of Finland and the intellectual rigor of a family steeped in the arts. Her early career as a painter saw her working in the traditions of modernism, absorbing influences from Surrealism and abstraction, yet always maintaining a connection to the human figure. Her paintings — often imbued with a deep sense of solitude — were the backbone of her later success as a storyteller. The *Moomins* emerged not as an afterthought, but as an extension of her larger artistic explorations: characters who simultaneously invited the viewer into a space of comfort while quietly confronting the complexities of identity, belonging, and the human condition.
+
+While Jansson’s *Moomins* became an enduring global phenomenon, her lesser-known works — particularly her adult fiction, paintings, and illustrations — reveal a deeper layer of her creative psyche. Her adult novels, such as *The Summer Book*, reflect a rare, crystalline wisdom that speaks to the ambiguities of life and aging, while her abstract drawings convey the same quiet intensity that characterized her children's work, but with a more adult sensibility. What remains consistent throughout Jansson’s oeuvre is a reverence for the small, the quiet, and the intimate moments that make up a life. Whether in her illustrations, her novels, or her *Moomin* stories, she imbues her creations with a sense of impermanence, as if to say that life — like her art — is fragile, fleeting, and always worth exploring.
+        </p>
+    </div>
+    <div class="photos">
+        <img src="Moomin-Comic-strip-album.jpg">
+        <img src="Moomin-Comic-strip-sketches.jpg">
+        <img src="Comet-in-Moominland.jpg">
+        <img src="Comic-strip-sketches-2.jpg">
+        <img src="Moomin-Comic-strip-sketches.jpg">
+        <img src="The-Dangerous-Journey.jpg">
+   </div>
+<div class="links">
+                <a href="https://tovejansson.com/">Tove Jansson Website</a>
+                <a href="https://www.moomin.com/en/">Moomin Official Site</a>
+                <a href="https://www.britannica.com/biography/Tove-Jansson">Britannica Trove Jansson</a>
+            </div>
+        </div>
+
+</body>
+</html>
